Naftah - updated Naftah main as a commandline itself